<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/calcul_des_imp_ts_locaux"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/nom"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/votre_nom"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/adresse"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/adresse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/votre_adresse"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/surface"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="@string/nombre_de_pieces"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/nb_pieces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:entries="@array/pieces"/>

    <CheckBox
        android:id="@+id/piscine"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="20dp"
        android:text="@string/piscine" />

    <Button
        android:id="@+id/btn_calculer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button" />

    <TextView
        android:id="@+id/txt_resultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textSize="24sp"
        android:textStyle="bold" />
</LinearLayout>